--- a/sync-thermal-service/printer_19.html
+++ b/sync-thermal-service/printer_19.html
@@ -1,8 +1,4 @@
 
-    <div align="right">
-      <font face="Angsana New" size="4">Bill Copy (1)</font>
-    </div>
-    
   <div style="padding: 2px;">
       
     <div align="center">
@@ -11,20 +7,19 @@
       </div>
     </div>
     <div align="center">
-      <div>
-        <font face="Angsana New" size="4">HENG GETSU</font>
-      </div>
-      <div>
-        <font face="Angsana New" size="4">Tax Invoice (ABB.)_Tax ID xxxxxxxxxx</font>
-      </div>
-    </div>
+        <div>
+          <font face="Angsana New" size="4">HENG GETSU</font>
+        </div>
+        <div>
+          <font face="Angsana New" size="4">Tax Invoice (ABB.)_Tax ID xxxxxxxxxx</font>
+        </div></div>
     <div align="center"><img src="file:com_logo.jpg" width="100" height="100"></div>
     <div align="center">
       <div>
-        <font face="Angsana New" size="4">Receipt No: 0000602</font>
+        <font face="Angsana New" size="4">Receipt No: 0000626</font>
       </div>
       <div>
-        <font face="Angsana New" size="4">Date: 19/02/2025 19:04:29</font>
+        <font face="Angsana New" size="4">Date: Mon Feb 24 2025 00:00:00 GMT+0700 (Indochina Time) 13:35:07</font>
       </div>
       <div>
         <font face="Angsana New" size="4"> Customer: 1 Cashier: 1001 Mac:001 </font>
@@ -52,25 +47,206 @@
             <font face="Angsana New" size="4">E</font>
           </td>
           <td style="max-width: 100px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;">
-            <font face="Angsana New" size="4">OPEN FOOD</font>
+            <font face="Angsana New" size="4">Luna Course </font>
           </td>
           <td align="right">
-            <font face="Angsana New" size="4">1.0</font>
+            <font face="Angsana New" size="4">1</font>
           </td>
           <td align="right">
-            <font face="Angsana New" size="4">0.00</font>
+            <font face="Angsana New" size="4">3800</font>
           </td>
         </tr>
-      </table>
+        <tr>
+          <td align="center">
+            <font face="Angsana New" size="4">E</font>
+          </td>
+          <td style="max-width: 100px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;">
+            <font face="Angsana New" size="4">Chawanmushi</font>
+          </td>
+          <td align="right">
+            <font face="Angsana New" size="4">1</font>
+          </td>
+          <td align="right">
+            <font face="Angsana New" size="4">0</font>
+          </td>
+        </tr>
+        <tr>
+          <td align="center">
+            <font face="Angsana New" size="4">E</font>
+          </td>
+          <td style="max-width: 100px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;">
+            <font face="Angsana New" size="4">Toro Taku Temaki</font>
+          </td>
+          <td align="right">
+            <font face="Angsana New" size="4">1</font>
+          </td>
+          <td align="right">
+            <font face="Angsana New" size="4">0</font>
+          </td>
+        </tr>
+        <tr>
+          <td align="center">
+            <font face="Angsana New" size="4">E</font>
+          </td>
+          <td style="max-width: 100px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;">
+            <font face="Angsana New" size="4">Uni Temaki</font>
+          </td>
+          <td align="right">
+            <font face="Angsana New" size="4">1</font>
+          </td>
+          <td align="right">
+            <font face="Angsana New" size="4">0</font>
+          </td>
+        </tr>
+        <tr>
+          <td align="center">
+            <font face="Angsana New" size="4">E</font>
+          </td>
+          <td style="max-width: 100px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;">
+            <font face="Angsana New" size="4">Sakana Don</font>
+          </td>
+          <td align="right">
+            <font face="Angsana New" size="4">1</font>
+          </td>
+          <td align="right">
+            <font face="Angsana New" size="4">0</font>
+          </td>
+        </tr>
+        <tr>
+          <td align="center">
+            <font face="Angsana New" size="4">E</font>
+          </td>
+          <td style="max-width: 100px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;">
+            <font face="Angsana New" size="4">Toro Aburi</font>
+          </td>
+          <td align="right">
+            <font face="Angsana New" size="4">1</font>
+          </td>
+          <td align="right">
+            <font face="Angsana New" size="4">0</font>
+          </td>
+        </tr>
+        <tr>
+          <td align="center">
+            <font face="Angsana New" size="4">E</font>
+          </td>
+          <td style="max-width: 100px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;">
+            <font face="Angsana New" size="4">Junsai</font>
+          </td>
+          <td align="right">
+            <font face="Angsana New" size="4">1</font>
+          </td>
+          <td align="right">
+            <font face="Angsana New" size="4">0</font>
+          </td>
+        </tr>
+        <tr>
+          <td align="center">
+            <font face="Angsana New" size="4">E</font>
+          </td>
+          <td style="max-width: 100px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;">
+            <font face="Angsana New" size="4">Mehikari</font>
+          </td>
+          <td align="right">
+            <font face="Angsana New" size="4">1</font>
+          </td>
+          <td align="right">
+            <font face="Angsana New" size="4">0</font>
+          </td>
+        </tr>
+        <tr>
+          <td align="center">
+            <font face="Angsana New" size="4">E</font>
+          </td>
+          <td style="max-width: 100px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;">
+            <font face="Angsana New" size="4">Hotate</font>
+          </td>
+          <td align="right">
+            <font face="Angsana New" size="4">1</font>
+          </td>
+          <td align="right">
+            <font face="Angsana New" size="4">0</font>
+          </td>
+        </tr>
+        <tr>
+          <td align="center">
+            <font face="Angsana New" size="4">E</font>
+          </td>
+          <td style="max-width: 100px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;">
+            <font face="Angsana New" size="4">Shima Aji</font>
+          </td>
+          <td align="right">
+            <font face="Angsana New" size="4">1</font>
+          </td>
+          <td align="right">
+            <font face="Angsana New" size="4">0</font>
+          </td>
+        </tr>
+        <tr>
+          <td align="center">
+            <font face="Angsana New" size="4">E</font>
+          </td>
+          <td style="max-width: 100px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;">
+            <font face="Angsana New" size="4">Kuromatsu</font>
+          </td>
+          <td align="right">
+            <font face="Angsana New" size="4">1</font>
+          </td>
+          <td align="right">
+            <font face="Angsana New" size="4">0</font>
+          </td>
+        </tr>
+        <tr>
+          <td align="center">
+            <font face="Angsana New" size="4">E</font>
+          </td>
+          <td style="max-width: 100px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;">
+            <font face="Angsana New" size="4">Sawara</font>
+          </td>
+          <td align="right">
+            <font face="Angsana New" size="4">1</font>
+          </td>
+          <td align="right">
+            <font face="Angsana New" size="4">0</font>
+          </td>
+        </tr>
+        <tr>
+          <td align="center">
+            <font face="Angsana New" size="4">E</font>
+          </td>
+          <td style="max-width: 100px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;">
+            <font face="Angsana New" size="4">Same Karei</font>
+          </td>
+          <td align="right">
+            <font face="Angsana New" size="4">1</font>
+          </td>
+          <td align="right">
+            <font face="Angsana New" size="4">0</font>
+          </td>
+        </tr>
+        <tr>
+          <td align="center">
+            <font face="Angsana New" size="4">E</font>
+          </td>
+          <td style="max-width: 100px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;">
+            <font face="Angsana New" size="4">Ama Ebi</font>
+          </td>
+          <td align="right">
+            <font face="Angsana New" size="4">1</font>
+          </td>
+          <td align="right">
+            <font face="Angsana New" size="4">0</font>
+          </td>
+        </tr></table>
     </div>
       <div align="center">
         <table width="100%" cellPadding="0" cellSpacing="0">
           <tr>
             <td>
-              <font face="Angsana New" size="4">Sub-TOTAL....(Item 21)</font>
+              <font face="Angsana New" size="4">Sub-TOTAL....(Item 14)</font>
             </td>
             <td align="right">
-              <font face="Angsana New" size="4">5,800.00</font>
+              <font face="Angsana New" size="4">3800</font>
             </td>
           </tr>
         </table>
@@ -83,10 +259,26 @@
         <table width="100%" cellPadding="0" cellSpacing="0">
           <tr>
             <td>
+              <font face="Angsana New" size="4">อาหาร (Food)</font>
+            </td>
+            <td align="right">
+              <font face="Angsana New" size="4">3800</font>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <font face="Angsana New" size="4">เครื่องดื่ม (Drink)</font>
+            </td>
+            <td align="right">
+              <font face="Angsana New" size="4">0</font>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <font face="Angsana New" size="4">สินค้าอื่นๆ (Other)</font>
             </td>
             <td align="right">
-              <font face="Angsana New" size="4">5,800.00</font>
+              <font face="Angsana New" size="4">0</font>
             </td>
           </tr>
         </table>
@@ -99,10 +291,10 @@
         <table width="100%" cellPadding="0" cellSpacing="0">
           <tr>
             <td>
-              <font face="Angsana New" size="4">ค่าบริการ 10.00%</font>
+              <font face="Angsana New" size="4">ค่าบริการ 10%</font>
             </td>
             <td align="right">
-              <font face="Angsana New" size="4">580.00</font>
+              <font face="Angsana New" size="4">380</font>
             </td>
           </tr>
           <tr>
@@ -110,15 +302,15 @@
               <font face="Angsana New" size="4">มูลค่าสินค้า/บริการ.....</font>
             </td>
             <td align="right">
-              <font face="Angsana New" size="4">5,962.62</font>
+              <font face="Angsana New" size="4">3906.54</font>
             </td>
           </tr>
           <tr>
             <td>
-              <font face="Angsana New" size="4">Vat 7.00%</font>
+              <font face="Angsana New" size="4">Vat 7%</font>
             </td>
             <td align="right">
-              <font face="Angsana New" size="4">417.38</font>
+              <font face="Angsana New" size="4">273.46</font>
             </td>
           </tr>
           <tr>
@@ -126,7 +318,7 @@
               <font face="Angsana New" size="4">Net Total</font>
             </td>
             <td align="right">
-              <font face="Angsana New" size="4">6,380.00</font>
+              <font face="Angsana New" size="4">4180</font>
             </td>
           </tr>
         </table>
@@ -138,7 +330,7 @@
                 <font face="Angsana New" size="4">เงินสด</font>
               </td>
               <td align="right">
-                <font face="Angsana New" size="4">6,380.00</font>
+                <font face="Angsana New" size="4">4180</font>
               </td>
             </tr>
           </table>
@@ -162,4 +354,3 @@
       <font face="Angsana New" size="4">มีอะไรก็ติดต่อมาได้ตลอด / Feedback</font>
     </div>
   </div>
-  
